fix: hero overflow

--- a/src/components/HeroComponent/index.module.css
+++ b/src/components/HeroComponent/index.module.css
@@ -49,7 +49,7 @@
 .hero__image {
   width: 640px;
   position: relative;
-  left: 8%;
+  left: 6%;
 }
 
 .hero__reset {
